ppapi/native_client/tests/ppapi_browser/bad/ppapi_bad_manifest_bad_files.nmf
{
  "program": {
    "x86-32": {"url": "ppapi_bad_no_ppp_instance_x86-32.nexe"},
    "x86-64": {"url": "ppapi_bad_no_ppp_instance_x86-64.nexe"},
    "arm": {"url": "ppapi_bad_no_ppp_instance_arm.nexe"}
  },
  "files": {
    "file.txt": {
      "unknown_arch": {}
    }
  }
}
